<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/landscape1_fragment_title"
            android:textSize="25sp"
            android:fontFamily="@font/bangers"
            android:textColor="@color/colorGold"
            android:background="@color/colorBlack"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/monte" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/landscape1_title"
            android:fontFamily="@font/bangers"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:layout_margin="8dp"
            android:textColor="@color/colorBlack"
            android:text="@string/landscape1_description"/>

    </LinearLayout>

</FrameLayout>