<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:gravity="center"
        android:padding="8dp"
        android:background="@color/colorLightBlue"
        android:orientation="horizontal">


        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_margin="5dp"
            android:text="@string/button1_title"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_margin="5dp"
            android:text="@string/button2_title"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:layout_margin="5dp"
            android:text="@string/button3_title"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/grass" />


</LinearLayout>